INTYGFV-16011: Addressed comments in PR